Correct width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -384,12 +384,13 @@ button {
   }
 }
 .services-heading-bottom {
-  font-size: 25px;
   text-align: center;
   padding: 0 15px;
   margin: 30px auto -70px;
 }
 .services-heading-bottom a {
+  font-weight: 600;
+  font-size: 25px;
   color: #454555;
 }
 .services-heading-bottom a:hover {
@@ -751,8 +752,6 @@ button {
   .card {
     flex: 1 1 100%;
     max-width: 100%;
-    margin-left: 15px;
-    margin-right: 15px;
   }
   .card:last-child {
     margin-bottom: 0;
