--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -41,12 +41,13 @@
   //  Bottom heading
 
   &-bottom {
-    font-size: 25px;
     text-align: center;
     padding: 0 15px;
     margin: 30px auto -70px;
 
     & a {
+      font-weight: 600;
+      font-size: 25px;
       color: $dark-grey;
 
       &:hover {
@@ -123,8 +124,6 @@
   @include mq('xs') {
     flex: 1 1 100%;
     max-width: 100%;
-    margin-left: 15px;
-    margin-right: 15px;
 
     &:last-child {
       margin-bottom: 0;
